feat: implement Swagger documentation and restructure book routes

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/app.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-  "start": "node src/server.js",
-  "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit",
-  "test:watch": "cross-env NODE_ENV=test jest --watch"
+    "start": "node src/server.js",
+    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit",
+    "test:watch": "cross-env NODE_ENV=test jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
